--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="icons\alurastart-logo.png" alt="logo do Alura Start" class="alurastart-header">
+        <img src="alurastart-logo.png" alt="logo do Alura Start" class="alurastart-header">
         <ul>
             <li class="header-lista-item">
                 Escola
