--- a/index.html
+++ b/index.html
@@ -97,6 +97,24 @@
                     </a>
                 </span>
             </span>
+            <span class="caixa-estudante">
+                <img src="" alt="" class="caixa-imagem">
+                <h1>Aluno</h1>
+                <span class="caixa-contatos">
+                    <a href="" target="_blank">
+                        <img src="" alt="">
+                    </a>
+                </span>
+            </span>
+            <span class="caixa-estudante">
+                <img src="" alt="" class="caixa-imagem">
+                <h1>Aluno</h1>
+                <span class="caixa-contatos">
+                    <a href="" target="_blank">
+                        <img src="" alt="">
+                    </a>
+                </span>
+            </span>
         </div>
     </section>
     <footer>
